k8s/deployment-user-app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
  namespace: hotel-ratings 
spec:
  replicas: 5
  selector:
    matchLabels:
      app: user-service-app
  template:
    metadata:
      labels:
        app: user-service-app
    spec:
      containers:
      - name: user-service
        image: nitesh2611/user-svc:17
        resources:
          limits:
            memory: "512Mi"
            cpu: "500m"
          requests:
            memory: 128Mi
            cpu: 100m
        ports:
        - containerPort: 8081
