k8s/mysql.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  namespace: hotel-ratings  
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - name: mysql
        image: mysql:8.2
        resources:
          limits:
            memory: "512Mi"
            cpu: "500m"
          requests:
            memory: 128Mi
            cpu: 100m
        ports:
        - containerPort: 3306
        volumeMounts:
        - mountPath: /var/lib/mysql
          name: mysql-data
      volumes:
      - name: mysql-data
        persistentVolumeClaim:
          claimName: pvc
