k8s/service-mysql.yml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: hotel-ratings 
spec:
  selector:
    app: mysql
  ports:
  - port: 3306
    targetPort: 3306
  type: ClusterIP
