k8s/service-user-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: hotel-ratings 
spec:
  selector:
    app: user-service-app
  ports:
  - port: 8081
    targetPort: 8081
  type: LoadBalancer
