k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing # or internal
    alb.ingress.kubernetes.io/target-type: ip       # or instance
    # (Optional) Add other annotations as needed
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: user-service # Your app's service name
            port:
              number: 8081 # The port your app listens on
